--- a/ryan/src/index.css
+++ b/ryan/src/index.css
@@ -1,10 +1,14 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  	margin: 0;
+  	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+	width: 100vw;
+	height: 100vh;
+	background: rgb(62,2,71);
+	background: radial-gradient(circle, rgba(62,2,71,1) 0%, rgba(64,31,2,1) 14%, rgba(64,4,68,1) 40%, rgba(19,1,33,1) 54%);
 }
 
 code {
