--- a/ryan/src/App.css
+++ b/ryan/src/App.css
@@ -36,3 +36,8 @@
     transform: rotate(360deg);
   }
 }
+
+@font-face {
+	font-family: Fascinate; 
+	src: local('Fascinate'), url(./fonts/Fascinate-Regular.ttf) format('truetype');
+}
