--- a/ryan/src/index.css
+++ b/ryan/src/index.css
@@ -7,23 +7,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
 	width: 100vw;
 	height: 100vh;
-	background-image: url("ryan_bg.JPG");
+	background-image: url("ryan_bg.jpg");
 	background-size: cover;
 }
 
 code {
   font-family: Fascinate, source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-
-.Quote{
-	font-family: Fascinate;
-}
-
-.Streak{
-	font-family: Fascinate;
-}
-
-#flame{
-	object-fit:none;
 }
