--- a/ryan/src/App.css
+++ b/ryan/src/App.css
@@ -7,6 +7,11 @@
 	src: local('Fascinate'), url(./fonts/Fascinate-Regular.ttf) format('truetype');
 }
 
+.center {
+  display: flex;
+  justify-content: center;
+}
+
 .particles {
   position: fixed; 
   top: 0;
@@ -14,5 +19,5 @@
   bottom: 0;
   left: 0; 
   z-index: 0; 
-  
+
 }
