--- a/ryan/src/index.css
+++ b/ryan/src/index.css
@@ -6,9 +6,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 	width: 100vw;
-	height: 100vh;
-	background-image: url("ryan_bg.jpg");
+	height: 100vh;	 
 	background-size: cover;
+	background-position: center;
+	background-image: url("ryan_bg.jpg");
 }
 
 code {
